# Concordo

./: CMakeLists.txt  Doxyfile  README.md  script.txt
dados_doc/: servidores.txt  usuarios.txt
include/: Canal.h  CanalTexto.h  CanalVoz.h  Mensagem.h  Servidor.h  Sistema.h  Usuario.h
src/: Canal.cpp  CanalTexto.cpp  CanalVoz.cpp  Mensagem.cpp  Servidor.cpp  Sistema.cpp  Usuario.cpp  main.cpp
